# SoftwareDev2024

01._Miscellanous/: index.html  payment.html
02._Data_Files/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_with_modules/: myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js
03._Modules/node_es_modules/: index.js  myModule.js
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Enviroment/: main.py
05._Python_Enviroment/01._virtualenv_Eviroment/: main.py
06._Servers/node/: app.js  package-lock.json  package.json
06._Servers/python/: pyproject.toml
07._Server-To-Server/assignment/python/: main.py  pyproject.toml
07._Server-To-Server/node/: app.js  package-lock.json  package.json
07._Server-To-Server/python/: main.py  pyproject.toml
08._Enviroment_Variables/node/: index.js
08._Enviroment_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: package-lock.json
12._Long_Polling/node/: app.js
13._Server-sent_Events/node-sse/: app.js  package.json
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
15._Webhooks/Assignment_Webhooks/: app.js  package-lock.json  package.json  registerWebhook.js  webhookHandlers.js  webhooks.json
15._Webhooks/node-webhooks/: app.js
15._Webhooks/python-webhooks/: main.py  pyproject.toml
16._Websockets/node_websockets/: clients.js  index.html  server.js
16._Websockets/python_fastapi/: main.py  pyproject.toml
16._Websockets/python_plain/: pyproject.toml
17._CORS/: index.html
17._CORS/node/: app.js
17._CORS/python_CORS/: main.py  pyproject.toml
18._Multipart-Forms/: index.html
18._Multipart-Forms/node-multipart-forms/: app.js  package-lock.json  package.json
18._Multipart-Forms/python-multipart-forms/: main.py  pyproject.toml
19._Images/: base64.html
20._MPEG_DASH/: app.js
23._Database_Migration/: alembic.ini  pyproject.toml
23._Database_Migration/alembic/versions/: a1b46621d0c9_create_account_table.py  c6270e979972_add_seed_data.py
23._Database_Migration/node-knex/: index.js  knexfile.js
23._Database_Migration/node-knex/migrations/: 20240418070300_initial_migration.js  20240418092821_mro_migration.js
23._Database_Migration/node-knex/seeds/: 01._users.js
(+81 files in other folders)
