[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["Mo-Mans0ur <Moha1998@outlook.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
